--- a/watcher/Dockerfile
+++ b/watcher/Dockerfile
@@ -4,6 +4,7 @@ ENV PYTHONUNBUFFERED=1
 
 # install dependencies
 RUN pip install kubernetes
+RUN pip install prometheus-client
 
 # copy the source code
 WORKDIR /usr/watcher
