--- a/nodevoto.yml
+++ b/nodevoto.yml
@@ -36,6 +36,7 @@ spec:
         - name: SVC_NAME
           value: gif
         image: sourishkrout/nodevoto:v5
+        imagePullPolicy: IfNotPresent
         name: gif-svc
         ports:
         - containerPort: 8080
@@ -84,6 +85,7 @@ spec:
         - name: SVC_NAME
           value: voting
         image: sourishkrout/nodevoto:v5
+        imagePullPolicy: IfNotPresent
         name: voting-svc
         ports:
         - containerPort: 8080
@@ -138,6 +140,7 @@ spec:
         - name: SVC_NAME
           value: web
         image: sourishkrout/nodevoto:v5
+        imagePullPolicy: IfNotPresent
         name: web-svc
         ports:
         - containerPort: 80
@@ -186,6 +189,7 @@ spec:
         - name: WEB_HOST
           value: web-svc.nodevoto:80
         image: sourishkrout/nodevoto:v5
+        imagePullPolicy: IfNotPresent
         name: vote-bot
         resources: {}
 status: {}
