--- a/corekube/k8s/corekube-1worker-autoscaling.yaml
+++ b/corekube/k8s/corekube-1worker-autoscaling.yaml
@@ -48,10 +48,10 @@ spec:
           protocol: UDP
         resources:
           limits:
-            cpu: 55
+            cpu: 200m
             memory: 20Gi
           requests:
-            cpu: 1
+            cpu: 100m
             memory: 1Gi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
