--- a/corekube/k8s/corekube-db.yaml
+++ b/corekube/k8s/corekube-db.yaml
@@ -45,9 +45,9 @@ spec:
           protocol: TCP
         resources:
           limits:
-            cpu: 10
+            cpu: 200m
           requests:
-            cpu: 10
+            cpu: 100m
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
