--- a/corekube/k8s/corekube-frontend.yaml
+++ b/corekube/k8s/corekube-frontend.yaml
@@ -47,9 +47,9 @@ spec:
           protocol: SCTP
         resources:
           limits:
-            cpu: 10
+            cpu: 200m
           requests:
-            cpu: 10
+            cpu: 100m
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
