mostly working with corekube (minus linkerd)

--- a/watcher/watcher.yaml
+++ b/watcher/watcher.yaml
@@ -92,8 +92,7 @@ spec:
     spec:
       containers:
       - name: watcher
-        image: watcher
-        imagePullPolicy: Never
+        image: ltrinks/watcher
         volumeMounts:
             - name: metrics
               mountPath: /metrics
