--- a/watcher/watcher.yaml
+++ b/watcher/watcher.yaml
@@ -1,19 +1,19 @@
-apiVersion: policy.linkerd.io/v1alpha1
-kind: AuthorizationPolicy
-metadata:
-  name: prometheus-admin-federate
-  namespace: linkerd-viz
-spec:
-  targetRef:
-    group: policy.linkerd.io
-    kind: Server
-    name: prometheus-admin
-  requiredAuthenticationRefs:
-    - group: policy.linkerd.io
-      kind: NetworkAuthentication
-      name: kubelet
+# apiVersion: policy.linkerd.io/v1alpha1
+# kind: AuthorizationPolicy
+# metadata:
+#   name: prometheus-admin-federate
+#   namespace: linkerd-viz
+# spec:
+#   targetRef:
+#     group: policy.linkerd.io
+#     kind: Server
+#     name: prometheus-admin
+#   requiredAuthenticationRefs:
+#     - group: policy.linkerd.io
+#       kind: NetworkAuthentication
+#       name: kubelet
 
----
+# ---
 
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -54,7 +54,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/metrics"
+    path: "/home/aether/linkerd-scaler/metrics"
 
 ---
 
