outperforming hpa with lstm

--- a/watcher/Dockerfile
+++ b/watcher/Dockerfile
@@ -1,13 +1,18 @@
 # base image
-FROM python:3.11.8-alpine
+FROM --platform=linux/x86_64 tensorflow/tensorflow
+
 ENV PYTHONUNBUFFERED=1
 
 # install dependencies
+RUN pip install --upgrade pip
 RUN pip install kubernetes
 RUN pip install prometheus-client
 RUN pip install matplotlib
 RUN pip install tzlocal
 RUN pip install pandas
+RUN pip install numpy
+RUN pip install scikit-learn
+RUN pip install statsmodels
 
 # copy the source code
 WORKDIR /usr/watcher
@@ -15,4 +20,4 @@ WORKDIR /usr/watcher
 COPY src .
 
 # execute when started
-CMD python main.py
+CMD python3 lstm_main.py
