--- a/corekube-hpa.yaml
+++ b/corekube-hpa.yaml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: web
-  namespace: nodevoto
+  name: corekube-frontend
+  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: web
+    name: corekube-frontend
   minReplicas: 1
   maxReplicas: 20
   metrics:
@@ -36,13 +36,13 @@ spec:
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: voting
-  namespace: nodevoto
+  name: corekube-worker
+  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: voting
+    name: corekube-worker
   minReplicas: 1
   maxReplicas: 20
   metrics:
@@ -71,13 +71,13 @@ spec:
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: gif
-  namespace: nodevoto
+  name: corekube-db
+  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: gif
+    name: corekube-db
   minReplicas: 1
   maxReplicas: 20
   metrics:
